Made it look nicer, work better, and work faster

--- a/cdn/html/base.html
+++ b/cdn/html/base.html
@@ -2,15 +2,51 @@
 <html>
     <head>
 
-        <meta name="description" content="AxonTeam logos, banners, images, and more!">
+        <title>AxonTeam CDN</title>
+
+        <link rel="stylesheet" type="text/css" href="base.css">
+
+        <meta name="description" content="AxonTeam CDN - Images, Logos, Banners">
+        <meta name="charset" content="utf-8">
         <meta http-equiv="refresh" content="30">
-        <meta name="title" content="AxonTeam CDN">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
     <body>
-        <h1>Below are links to cdn pages</h1>
-        <a href="/logos/">Logos!</a>
-        <a href='/banners/'>Banners!</a>
+        <div class="top">
+            <span><img src="/logos/AxonTeam" height="45" alt ="AxonTeam Logo"> AxonTeam - Content Delivery Network</span>
+        </div>
+        <h3>Images, Logos, Banners, and more...</h3>
+        <h3>Below you will see the paths this CDN utilizes</h3>
+        <table class = "bigtable">
+            <tr>
+                <th>Path</th>
+                <th>What it does</th>
+                <th>Example</th>
+            </tr>
+            <tr>
+                <td>images/:id</td>
+                <td>Displays a image by ID</td>
+                <td>images/th95</tD>
+            </tr>
+            <tr>
+                <td>screenshots/:id</td>
+                <td>Displays a screenshot by ID</td>
+                <td>screenshots/8kg9</td>
+            </tr>
+            <tr>
+                <td>logos/:name</td>
+                <td>Displays a logo by its name</td>
+                <td>logos/AxonTeam</td>
+            </tr>
+            <tr>
+                <td>banners/:name</td>
+                <td>Displays a banner by name</td>
+                <td>banners/AxonCore</td>
+            </tr>
+        </table>
+        <footer>
+            <p>Copyright© 2019 AxonTeam</p>
+        </footer>
     </body>
 </html>
