Added & fixed features/problems
Added ability to upload as a buffer, to upload multiple different extensions, and fixed some code when uploading. Minor thing... but CSS also got fixed

--- a/cdn/html/base.html
+++ b/cdn/html/base.html
@@ -4,7 +4,7 @@
 
         <title>AxonTeam CDN</title>
 
-        <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="stylesheet" type="text/css" href="./base.css">
 
         <meta name="description" content="AxonTeam CDN - Images, Logos, Banners">
         <meta name="charset" content="utf-8">
@@ -16,8 +16,8 @@
         <div class="top">
             <span><img src="/logos/AxonTeam" height="45" alt ="AxonTeam Logo"> AxonTeam - Content Delivery Network</span>
         </div>
-        <h3>Images, Logos, Banners, and more...</h3>
-        <h3>Below you will see the paths this CDN utilizes</h3>
+        <h3>Images, Logos, Banners, and Screenshots</h3>
+        <h6>Below you will see the public paths avaliable</h6>
         <table class = "bigtable">
             <tr>
                 <th>Path</th>
