--- a/cdn/html/notfound.html
+++ b/cdn/html/notfound.html
@@ -3,57 +3,14 @@
     <head>
         <title>AxonTeam CDN</title>
 
-        <style>
-            html {
-                min-height: 90%;
-                max-height: 90%;
-                padding: 0%;
-            }
-            body {
-                padding: 0%;
-                background-color: rgb(46, 49, 53);
-                color: rgb(239, 172, 64);
-                text-align: center;
-                min-height: 97vh;
-                font-size: 4vh;
-            }
-
-            .top {
-                max-height: 10vh;
-                background-color: rgb(74, 72, 79);
-                text-align: left;
-                position: relative;
-                font-size: 100%;
-                top: 0%;
-            }
-
-            footer {
-                position: absolute;
-                bottom: 0%;
-                right: 0%;
-                left: 0%;
-                background-color: rgb(74, 72, 79);
-                font-size: 2vh;
-            }
-            a {
-                color: inherit;
-            }
-
-            a:visited {
-                color: rgb(196, 133, 33);
-            }
-
-            a:hover {
-                color: rgb(255, 156, 0);
-            }
-        </style>
+        <link rel="stylesheet" href="./base.css" type="text/css">
     </head>
     <body>
         <div class="top">
             <span><img src="/logos/AxonTeam" height="45" alt ="AxonTeam Logo"> AxonTeam - CDN</span>
         </div>
         <a href="/">Oops, looks like that doesn't exist! You can go here though!</a>
-
+        <p>The link above will redirect you to the index of the cdn. Showing you the public paths</p>
         <footer>
             <p>Copyright© 2019 AxonTeam</p>
         </footer>
